2007-01-17  Per Bothner  <per@bothner.com>

	* RunXQTS.java (<init>): Update expected failures.

2007-01-16  Per Bothner  <per@bothner.com>

	* RunXQTS.java (compare): Remove by stack field outputCompareAlts.

	* RunXQTS.java (matches): Resolve character references.

	* RunXQTS.java (<init>): Update expected failures.

2007-01-14  Per Bothner  <per@bothner.com>

	* RunXQTS.java (evalTest): Set 'strict' on XMLPrinter.

	* RunXQTS.java (<init>): Update expected failures.

2007-01-11  Per Bothner  <per@bothner.com>

	* RunXQTS.java (<init>): Constr-namespace-13 now passes.

2007-01-10  Per Bothner  <per@bothner.com>

	* Makefile.am (KAWA): Simplify - always use ../../../bin/kawa-bin.
	(DISABLE_GCJ_COMPILED_KAWA, ENABLE_GCJ_COMPILED_KAWA): Remove macros.

2007-01-03  Per Bothner  <per@bothner.com>

	* RunXQTS.java (enElement): Use ModuleInfo's new
	setSourceAbsPathname method.

2007-01-02  Per Bothner  <per@bothner.com>

	* RunXQTS.java (main): Update to use FilePath.

2006-12-29  Per Bothner  <per@bothner.com>

	* RunXQTS.java (endElement): Update to use Path.valueOf.

	* RunXQTS.java (<init>): Remove explicit listing of trivial-* to fail.

2006-12-06  Per Bothner  <per@bothner.com>

	* RunXQTS.java: Update for renamed Consumer methods.
	* TestSuite.java: Likewise.

2006-12-05  Per Bothner  <per@bothner.com>

	* Makefile.am (java_sources): Add RunXQTS.java, for the sake of dist.

	* TestSuite.java: Add generic parameters if JAVA5.
	* RunXQTS.java: Likewise.
	(<init>): surrogates12..surrogates15 work for JAVA5 not just JAVA6.

2006-12-04  Per Bothner  <per@bothner.com>

	* RunXQTS.java (endGroup): Don't call ModuleManager.register.
	Instead create ModuleInfo using findWithClassName.

	* RunXQTS.java (<init>): Add preprocessing for expected failures.

	* Makefile.am (EXTRA_DIST): Add a missing file.

2006-12-01  Per Bothner  <per@bothner.com>

	* RunXQTS.java (matches): If floating-point literal seem in
	otherwise non-matching output, compare values as float.